# roadmaps-python-task-tracker

./: .editorconfig  .gitconfig  .gitignore  CHANGELOG.md  FUTURELOG.md  LICENSE  Readme.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  task_cli.rst
src/task_cli/: __init__.py  __main__.py  task_cli.py  tasker.py
tests/: test_task_cli_pytest.py  test_task_cli_unittests.py
